--- a/compare-ui-screenshots.html
+++ b/compare-ui-screenshots.html
@@ -27,8 +27,39 @@
     <meta name="twitter:description" content="Compare app interfaces side by side with clean layouts.">
     <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     
+    <!-- JSON-LD: WebApplication + HowTo + FAQ -->
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"WebApplication","name":"Compare App UI Screenshots","url":"https://www.pictrikit.com/compare-ui-screenshots.html","description":"Compare app UI screenshots side by side. Show interface differences, design iterations, or version changes with clean comparison layouts.","applicationCategory":"DesignApplication","operatingSystem":"Any","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebApplication",
+          "name": "Compare App UI Screenshots",
+          "url": "https://www.pictrikit.com/compare-ui-screenshots.html",
+          "description": "Compare app UI screenshots side by side. Show interface differences, design iterations, or version changes with clean comparison layouts.",
+          "applicationCategory": "DesignApplication",
+          "operatingSystem": "Any",
+          "offers": {"@type": "Offer", "price": "0", "priceCurrency": "USD"},
+          "featureList": ["UI comparison layouts", "Design iteration showcase", "Version difference display", "No registration required"]
+        },
+        {
+          "@type": "HowTo",
+          "name": "How to Compare App UI Screenshots",
+          "totalTime": "PT1M",
+          "step": [
+            {"@type": "HowToStep", "name": "Upload UI Screenshots", "text": "Upload the UI versions you want to compare"},
+            {"@type": "HowToStep", "name": "Choose Comparison Style", "text": "Select side-by-side or overlay comparison"},
+            {"@type": "HowToStep", "name": "Export", "text": "Download your UI comparison image"}
+          ]
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [
+            {"@type": "Question", "name": "How do I compare UI screenshots?", "acceptedAnswer": {"@type": "Answer", "text": "Upload your UI screenshots to PictriKit, choose a comparison layout, and export a clean side-by-side comparison showing the differences."}}
+          ]
+        }
+      ]
+    }
     </script>
     
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
