feat: add BreadcrumbList schema to all tool pages + enhance homepage JSON-LD with WebSite and Organization

--- a/clean-screenshot-layout.html
+++ b/clean-screenshot-layout.html
@@ -57,6 +57,13 @@
           "mainEntity": [
             {"@type": "Question", "name": "How do I create a clean screenshot layout?", "acceptedAnswer": {"@type": "Answer", "text": "Upload your screenshots to PictriKit, choose a layout, and the tool will automatically arrange them with consistent spacing and alignment."}}
           ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.pictrikit.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Clean Screenshot Layout", "item": "https://www.pictrikit.com/clean-screenshot-layout.html"}
+          ]
         }
       ]
     }
@@ -157,7 +164,7 @@
 
     <div class="content">
         <div class="container">
-            <p>A clean layout makes screenshots easier to understand. When images are properly spaced, aligned, and organized, the viewer focuses on the content instead of being distracted by messy arrangement. Clean doesn't mean fancy闂佺偨鍎查弨鐨?means intentional.</p>
+            <p>A clean layout makes screenshots easier to understand. When images are properly spaced, aligned, and organized, the viewer focuses on the content instead of being distracted by messy arrangement. Clean doesn't mean fancy闂備胶鍋ㄩ崕鏌ュ绩閻?means intentional.</p>
 
             <div class="example-image">
                 <div class="example-placeholder">
@@ -172,7 +179,7 @@
             <p>When you drag screenshots into a document or slide, you're eyeballing everything. Is this gap the same as that one? Are these two images actually the same width? It's hard to tell, and small inconsistencies add up. The result looks "off" even if you can't pinpoint why.</p>
 
             <h2>Let the layout do the work</h2>
-            <p>A structured layout handles spacing and alignment automatically. You choose how you want your screenshots arranged闂佺偨鍎查弫鍍玠e by side, in a grid, or stacked闂佺偨鍎查弨顤磀 the layout ensures everything lines up. The spacing is consistent, the sizing is balanced, and the result looks clean without any manual tweaking.</p>
+            <p>A structured layout handles spacing and alignment automatically. You choose how you want your screenshots arranged闂備胶鍋ㄩ崕鏌ュ极閸嶇帬e by side, in a grid, or stacked闂備胶鍋ㄩ崕鏌ュ绩椤ょ the layout ensures everything lines up. The spacing is consistent, the sizing is balanced, and the result looks clean without any manual tweaking.</p>
 
             <h2>What you can do</h2>
             <p>With clean layout options, you can:</p>
@@ -199,7 +206,7 @@
                 <li>Export a clean, organized image</li>
             </ol>
 
-            <p>The result is a screenshot layout that looks like you spent time on it闂佺偨鍎查弨鈺瞖n though you didn't. Clean, balanced, and ready to use.</p>
+            <p>The result is a screenshot layout that looks like you spent time on it闂備胶鍋ㄩ崕鏌ュ绩閳虹灃n though you didn't. Clean, balanced, and ready to use.</p>
 
             <div class="cta-section">
                 <h2>Ready to create a clean layout?</h2>
@@ -262,7 +269,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
