--- a/compare-screenshots.html
+++ b/compare-screenshots.html
@@ -109,6 +109,13 @@
               }
             }
           ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.pictrikit.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Compare Screenshots", "item": "https://www.pictrikit.com/compare-screenshots.html"}
+          ]
         }
       ]
     }
