--- a/align-screenshots-centered.html
+++ b/align-screenshots-centered.html
@@ -57,6 +57,13 @@
           "mainEntity": [
             {"@type": "Question", "name": "How do I center align my screenshots?", "acceptedAnswer": {"@type": "Answer", "text": "Upload your screenshots to PictriKit and they will be automatically centered in the layout. No manual adjustment needed."}}
           ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.pictrikit.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Align Screenshots Centered", "item": "https://www.pictrikit.com/align-screenshots-centered.html"}
+          ]
         }
       ]
     }
@@ -172,7 +179,7 @@
             <p>Most tools let you drag images around freely, which sounds flexible but creates problems. You nudge an image left, then right, then left again. You zoom in to check if it's really centered. You use alignment guides that sometimes help and sometimes don't. For something so basic, it takes too much effort.</p>
 
             <h2>Automatic centering that just works</h2>
-            <p>This tool centers every screenshot automatically. When you place an image into a layout slot, it's centered by default闂佺偨鍎查弨顦晅h horizontally and vertically. You don't drag, you don't nudge, you don't guess. The image goes where it belongs, and it stays there.</p>
+            <p>This tool centers every screenshot automatically. When you place an image into a layout slot, it's centered by default闂備胶鍋ㄩ崕鏌ュ绩椤︽檯h horizontally and vertically. You don't drag, you don't nudge, you don't guess. The image goes where it belongs, and it stays there.</p>
 
             <h2>What you can do</h2>
             <p>With automatic centering, you can:</p>
@@ -262,7 +269,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
