--- a/arrange-screenshots-for-presentation.html
+++ b/arrange-screenshots-for-presentation.html
@@ -57,6 +57,13 @@
           "mainEntity": [
             {"@type": "Question", "name": "How do I arrange screenshots for a presentation?", "acceptedAnswer": {"@type": "Answer", "text": "Upload your screenshots to PictriKit, select a presentation-friendly layout, and export the arranged image to use in your slides."}}
           ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.pictrikit.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Arrange Screenshots for Presentation", "item": "https://www.pictrikit.com/arrange-screenshots-for-presentation.html"}
+          ]
         }
       ]
     }
@@ -258,7 +265,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
