--- a/before-after-screenshot.html
+++ b/before-after-screenshot.html
@@ -57,6 +57,13 @@
           "mainEntity": [
             {"@type": "Question", "name": "How do I create a before and after comparison?", "acceptedAnswer": {"@type": "Answer", "text": "Upload your before and after screenshots to PictriKit, and they will be automatically arranged in a clean comparison layout."}}
           ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.pictrikit.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Before After Screenshot", "item": "https://www.pictrikit.com/before-after-screenshot.html"}
+          ]
         }
       ]
     }
@@ -264,7 +271,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
