--- a/combine-chat-screenshots.html
+++ b/combine-chat-screenshots.html
@@ -65,6 +65,13 @@
             {"@type": "Question", "name": "How do I combine multiple chat screenshots?", "acceptedAnswer": {"@type": "Answer", "text": "Upload your chat screenshots to PictriKit in order, and they will be automatically stacked vertically into one long image."}},
             {"@type": "Question", "name": "Does this work with WhatsApp screenshots?", "acceptedAnswer": {"@type": "Answer", "text": "Yes, PictriKit works with screenshots from any chat app including WhatsApp, iMessage, Telegram, and WeChat."}}
           ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.pictrikit.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Combine Chat Screenshots", "item": "https://www.pictrikit.com/combine-chat-screenshots.html"}
+          ]
         }
       ]
     }
@@ -266,7 +273,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
