--- a/compare-ui-screenshots.html
+++ b/compare-ui-screenshots.html
@@ -57,6 +57,13 @@
           "mainEntity": [
             {"@type": "Question", "name": "How do I compare UI screenshots?", "acceptedAnswer": {"@type": "Answer", "text": "Upload your UI screenshots to PictriKit, choose a comparison layout, and export a clean side-by-side comparison showing the differences."}}
           ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.pictrikit.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Compare UI Screenshots", "item": "https://www.pictrikit.com/compare-ui-screenshots.html"}
+          ]
         }
       ]
     }
@@ -168,7 +175,7 @@
             </div>
 
             <h2>Why UI comparison matters</h2>
-            <p>Interface design is about details. A button moved slightly, a color changed, a layout adjusted闂佺偨鍎查弫鍒猠se differences are hard to spot when you're looking at screenshots separately. Placing them side by side lets you see exactly what changed and whether the change works. It's essential for design reviews, stakeholder presentations, and documentation.</p>
+            <p>Interface design is about details. A button moved slightly, a color changed, a layout adjusted闂備胶鍋ㄩ崕鏌ュ极閸掔尃se differences are hard to spot when you're looking at screenshots separately. Placing them side by side lets you see exactly what changed and whether the change works. It's essential for design reviews, stakeholder presentations, and documentation.</p>
 
             <h2>The problem with ad-hoc comparisons</h2>
             <p>Opening two screenshots in separate windows and switching between them doesn't give you a true comparison. Pasting them into a slide deck often results in mismatched sizes and awkward spacing. You end up spending time on layout instead of focusing on the actual UI differences you're trying to evaluate.</p>
@@ -264,7 +271,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
