--- a/screenshot-grid-layout.html
+++ b/screenshot-grid-layout.html
@@ -57,6 +57,13 @@
           "mainEntity": [
             {"@type": "Question", "name": "How do I create a screenshot grid?", "acceptedAnswer": {"@type": "Answer", "text": "Select a grid layout in PictriKit, upload your screenshots, and they will be automatically arranged in a clean grid format."}}
           ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.pictrikit.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Screenshot Grid Layout", "item": "https://www.pictrikit.com/screenshot-grid-layout.html"}
+          ]
         }
       ]
     }
@@ -175,7 +182,7 @@
             <p>Creating a grid manually means resizing each image to the same dimensions, calculating spacing, and aligning everything precisely. If one image is slightly larger or the gaps aren't consistent, the whole grid looks off. It's tedious work that takes attention away from your actual content.</p>
 
             <h2>Structured grids without the work</h2>
-            <p>With a grid layout tool, you choose the structure闂?x2, 2x3, 3x3闂佺偨鍎查弨顤磀 place your screenshots into it. The layout handles sizing and spacing automatically. Every cell is the same size, every gap is consistent, and every image is centered within its space.</p>
+            <p>With a grid layout tool, you choose the structure闂?x2, 2x3, 3x3闂備胶鍋ㄩ崕鏌ュ绩椤ょ place your screenshots into it. The layout handles sizing and spacing automatically. Every cell is the same size, every gap is consistent, and every image is centered within its space.</p>
 
             <h2>What you can do</h2>
             <p>With grid layouts, you can:</p>
@@ -265,7 +272,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
